updated visibility icons, fixed enter in widget add form, implemented more permissions

--- a/public/bootstrap4/css/modules/cms-content.css
+++ b/public/bootstrap4/css/modules/cms-content.css
@@ -3,6 +3,20 @@
   cursor: move;
 }
 
+.widget-muted {
+  border-color: #e3e3e3;
+}
+
+.widget-muted .widget-header {
+  background-color: #fafafa;
+  border-color: #e3e3e3;
+}
+
+.widget-muted .widget-title .name,
+.widget-muted .widget-content {
+  opacity: 0.5;
+}
+
 .sections .placeholder {
   min-height: 100px;
   margin-bottom: 1em;
